--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Python tools
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install flake8 pytest
+        pip install flake8 setuptools wheel pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Preinstall HTSeq (swig, conda)
@@ -36,8 +36,10 @@ jobs:
         SWIG: ${{ matrix.swig }}
         CONDA_PY: ${{ matrix.python-version }}
       run: ./.travis_install.sh
-    - name: Test HTSeq
-      env:
-        TRAVIS_OS_NAME: ${{ matrix.os }}
-        CONDA_PY: ${{ matrix.python-version }}
-      run: ./.travis_test.sh
+        #- name: Test HTSeq
+        #  env:
+        #    TRAVIS_OS_NAME: ${{ matrix.os }}
+        #    CONDA_PY: ${{ matrix.python-version }}
+        #  run: ./.travis_test.sh
+    - name: Test with pytest
+      run: pytest --doctest-glob="*.rst"
