--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,9 @@ jobs:
         CONDA_PY: ${{ matrix.python-version }}
       run: ./.ci_install.sh
 
-        #- name: Test HTSeq
-        #  env:
-        #    TRAVIS_OS_NAME: ${{ matrix.os }}
-        #    CONDA_PY: ${{ matrix.python-version }}
-        #  run: ./.travis_test.sh
-
     - name: Test with pytest
-      run: pytest --doctest-glob="*.rst"
+      env:
+        TRAVIS_OS_NAME: ${{ matrix.os }}
+        SWIG: ${{ matrix.swig }}
+        CONDA_PY: ${{ matrix.python-version }}
+      run: ./.ci_test.sh
