--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,11 @@ on: [push]
 jobs:
   build_manylinux:
     runs-on: ubuntu-latest
-    container: pypywheels/manylinux2010-pypy_x86_64
-      # quay.io/pypa/manylinux2010_x86_64
+      #container: pypywheels/manylinux2010-pypy_x86_64
+    container: quay.io/pypa/manylinux2010_x86_64
     steps:
       - uses: actions/checkout@v2
       - name: Build and test manylinux wheels
-        env:
-          DOCKER_IMAGE: ${{ container }}
         run:
           ./buildwheels.sh
           ./testwheels.sh
