--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2010_x86_64
     steps:
-      #- uses: actions/checkout@v2
-      - name: Build and test manylinux wheels
+      - name: Clone repo
         run:
           git clone -b ${GITHUB_REF} --single-branch https://github.com/${GITHUB_REPOSITORY}.git
+      - name: Prepare docker image
+        run:
           ./prepare_docker.sh
+      - name: Build wheels
+        run:
           ./buildwheels.sh
+      - name: Test wheels
+        run:
           ./testwheels.sh
 
   build:
