Some logic for CD

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,19 +6,29 @@ on:
 
 jobs:
   deploy_manylinux:
-    os: ubuntu-latest
+    runs-on: ubuntu-latest
+    container: quay.io/pypa/manylinux2010_x86_64
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build manylinux wheels and deploy (including source)
+    - name: Clone repo
+      run:
+        git clone -b $(echo ${GITHUB_REF} | cut -d/ -f3) --single-branch https://github.com/${GITHUB_REPOSITORY}.git
+    - name: Move repo folder
+      run:
+        mv htseq /io
+    - name: Prepare docker image
+      run:
+        /io/prepare_docker.sh
+    - name: Build wheels
+      run:
+        /io/buildwheels.sh
+    - name: Deploy source and manylinux wheels
       env:
-        DOCKER_IMAGE: quay.io/pypa/manylinux2010_x86_64
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         TWINE_PASSWORD_TESTPYPI: ${{ secrets.TESTPYPI_PASSWORD }}
       run:
-        ./.ci_install.sh
-        ./.ci_deploy.sh
+        /io/deploywheels.sh
 
   deploy_mac:
     os: macos-latest
