--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Upload Python Package
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: master
+    tags: release_[1-9]+.[0-9]+.[0-9]+*
 
 jobs:
   deploy_manylinux:
